--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,4 @@
 - faire des tests internet & api quand on lance le bot
 - calculer un peu plus la croissance ou décroissance d'une courbe pour estimer la faisabilité d'achat ou vente (mieux que juste tendance sur 3 points)
 - Peut-être : Quand on lisse les points qui n'ont pas assez d'écart de valeur, on garde quand même ceux qui ont au minimum 2 intervalles de différence même si la différence de prix est proche
+- prendre en compte les fees dans le calculs de bénéfices data.json
