--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-- api binance
+- lastWok récupéré de works filtered et non du chartWorker
 - Pouvoir lancer le bot avec un trade en court (achat ou vente) et repartir de ce dernier
 
 - si le bot est bloqué sur un trade de vente trop longtemps envoyer une alerte
