--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 - recréer les tendances après filtrage
 - Test de perf au lancement
 - si le bot est bloqué sur un trade de vente trop longtemps envoyer une alerte
+- Sur le chart uniquement, ne pas afficher les anciens trades
 
 - mettre plus d'options pour controler le bot (socket ?) -> voir sur une page web ses trades, son état, le chart, etc.
 - amélorer l'algo de tendances
