fix(trader): when sold after min threshold, if not all the entire quantity was sold, he keeps to trying to sell

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+- pouvoir récupérer le ticker d'un symbol (wait npm update)
 - récupérer le prix exact d'achat/vente après order
 - recréer les tendances après filtrage
 - Test de perf au lancement
