--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+- recalculer les bénéfices sur le chart
 - sur le chart, distinguer les achats des ventes
 - checker la corrélation entre les balances et les configs (quantity)
 - recréer les tendances après filtrage
