--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,12 @@
+- quand il a vendu au x% au seuil min, si ce n'est pas tout, il faut pas reset au point de vente au seuil min
+- checker la corrélation entre les balances et les configs (quantity)
 - sur le chart, distinguer les achats des ventes
 - choisir la monnaie
     - regarder les variations sur 24h du prix
     - volume
     - écart entre les pics (spread)
-- checker la corrélation entre les balances et les configs (quantity)
 - recréer les tendances après filtrage, les lastPrice/trend aussi (relink les points entre eux)
 - Test de perf au lancement
 
 - mettre plus d'options pour controler le bot (socket ?) -> voir sur une page web ses trades, son état, le chart, etc.
 - amélorer l'algo de tendances
-- MAYBE: au lieu de faire le nombre de points pour détecter une tendances, faire avec un % (WARN: aux pics isolés)
