--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,13 @@
+- Pour la nouvelle strat d'achat (après x points de montée) il faudrait la maximiser à 2-3 fois max par montée, on bien si la montée excède un certains % depuis le dernier vrai creux
+- quand on relance avec un data.json, il faudrait récupérer le time du dernier trade, et récupérer le work smoothed depuis ce time et le mettre dans la propriété du trader et worker 
 - Eliminer les pics de plus de x%
+- Changer de monnaie quand on a fait x% de bénef
+- Changer de monnaie quand on a fait x% de pertes
 - recréer les tendances après filtrage, les lastPrice/trend aussi (relink les points entre eux)
-- choisir la monnaie
+- Sélection auto de la monnaie par un worker externe (le trader viendra lui demander la crypto à trader à chaque fois qu'il a tout vendu)
     - regarder les variations sur 24h du prix
     - volume
     - écart entre les pics (spread)
-
 - mettre plus d'options pour controler le bot (socket ?) -> voir sur une page web ses trades, son état, le chart, etc.
 - amélorer l'algo de tendances
 - refactor
