--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+- avant de vendre au market, il faut regarder le bids le plus haut pour voir si on va pas trop se faire enfler sur les % bénef (qu'on ne retombe pas en dessous du seuil min)
 - Pour la nouvelle strat d'achat (après x points de montée) il faudrait la maximiser à 2-3 fois max par montée, on bien si la montée excède un certains % depuis le dernier vrai creux
 - Eliminer les pics de plus de x%
 - Changer de monnaie quand on a fait x% de bénef
