feat(docker): add dockerization

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,8 @@
-- faire des limit orders
-- ajouter dans le README comment installer le projet, le build, et le start
+- faire des limit orders (au moins pour la vente)
 - quand on clear les works il faut garder le dernier work associé au dernier trade
 - avant de vendre au market, il faut regarder le bids le plus haut pour voir si on va pas trop se faire enfler sur les % bénef (qu'on ne retombe pas en dessous du seuil min)
 - Pour la nouvelle strat d'achat (après x points de montée) il faudrait la maximiser à 2-3 fois max par montée, on bien si la montée excède un certains % depuis le dernier vrai creux
 - Eliminer les pics de plus de x%
-- Changer de monnaie quand on a fait x% de bénef
-- Changer de monnaie quand on a fait x% de pertes
 - recréer les tendances après filtrage, les lastPrice/trend aussi (relink les points entre eux)
 - Sélection auto de la monnaie par un worker externe (le trader viendra lui demander la crypto à trader à chaque fois qu'il a tout vendu)
     - regarder les variations sur 24h du prix
